# ChangeLog for gnome-extra/libgtkhtml
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/libgtkhtml/ChangeLog,v 1.32 2003/07/01 17:29:05 weeve Exp $

  01 Jul 2003; Jason Wever <weeve@gentoo.org> libgtkhtml-3.0.5.ebuild:
  Added ~sparc to keywords to fix bug #23793.

  30 Jun 2003; Bartosch Pixa <darkspecter@gentoo.org> libgtkhtml-2.2.3.ebuild:
  set ppc in keywords

*libgtkhtml-3.0.5 (10 Jun 2003)

  10 Jun 2003; Alastair Tse <liquidx@gentoo.org> libgtkhtml-3.0.3.ebuild,
  libgtkhtml-3.0.5.ebuild:
  version bump for evo 1.4

  05 Jun 2003; Luca Barbato <lu_zero@gentoo.org> libgtkhtml-3.0.4.ebuild:
  Added ~ppc keyword

*libgtkhtml-3.0.4 (03 Jun 2003)

  03 Jun 2003; Alastair Tse <liquidx@gentoo.org> libgtkhtml-3.0.4.ebuild:
  version bump. added more hacks around libtool problems. part of evo 1.3.92
  update

*libgtkhtml-2.2.4 (13 May 2003)

  13 May 2003; foser <foser@gentoo.org> libgkthtml-2.2.4.ebuild :
  New version, minor ebuild fixes 

*libgtkhtml-3.0.3 (07 May 2003)

  07 May 2003; Alastair Tse <liquidx@gentoo.org> libgtkhtml-3.0.3.ebuild:
  version bump

*libgtkhtml-3.0.2 (21 Apr 2003)

  21 Apr 2003; Alastair Tse <liquidx@gentoo.org> libgtkhtml-3.0.2.ebuild:
  evo-1.3.2 version bump. this contains an unpleasent workaround for libtool
  problems.

*libgtkhtml-2.2.3 (17 Apr 2003)

  17 Apr 2003; foser <foser@gentoo.org> libgtkhtml-2.2.3.ebuild :
  New version

*libgtkhtml-2.2.2 (15 Apr 2003)

  15 Apr 2003; foser <foser@gentoo.org> libgtkhtml-2.2.2.ebuild :
  New version

*libgtkhtml-3.0.1 (21 Mar 2003)

  21 Mar 2003; Alastair Tse <liquidx@gentoo.org> libgtkhtml-3.0.1.ebuild:
  moving gtk2 gtkhtml to libgtkhtml to counter ximian/gnome 
  naming ping pong

*libgtkhtml-2.2.1 (03 Mar 2003)

  09 Mar 2003; Aron Griffis <agriffis@gentoo.org> libgtkhtml-2.2.1.ebuild:
  Mark stable on alpha

  03 Mar 2003; foser <foser@gentoo.org> libgtkhtml-2.2.1.ebuild :
  New version
