@@ -1,11 +1,14 @@
 # ChangeLog for gnome-extra/yelp
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/yelp/ChangeLog,v 1.31 2003/06/29 22:18:48 darkspecter Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/yelp/ChangeLog,v 1.32 2003/07/04 19:58:38 gmsoft Exp $
 
   30 Jun 2003; Bartosch Pixa <darkspecter@gentoo.org> yelp-2.2.0.ebuild:
   set ppc in keywords
 
 *yelp-2.2.3 (25 Jun 2003)
+
+  04 Jul 2003; Guy Martin <gmsoft@gentoo.org> yelp-2.2.3.ebuild :
+  Added ~hppa to KEYWORDS.
 
   25 Jun 2003; foser <foser@gentoo.org> yelp-2.2.3.ebuild :
   New version, small dep fix
@@ -28,6 +31,9 @@
   fixed libgtkhtml deps
 
 *yelp-2.2.0 (30 Jan 2003)
+
+  04 Jul 2003; Guy Martin <gmsoft@gentoo.org> yelp-2.2.0.ebuild :
+  Added hppa to KEYWORDS.
 
   13 Mar 2003; Alastair Tse <liquidx@gentoo.org> yelp-2.2.0.ebuild:
   Removing duplicate libgtkhtml dep.
